<resources>

    <string name="app_name">FPAppFront</string>
    <string name="login_success">Login succes</string>
    <string name="register_success">Register succes</string>
    <string name="login_error">Login error</string>
    <string name="register_error">Register error</string>
    <string name="empty_fields">Complete all fields</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App logo</string>
    <string name="combo_size">Combo size</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="get_combos">Get Combos</string>
    <string name="refresh_ingredients">Refresh ingredients</string>
    <string name="families">Families</string>
    <string name="ingredient">Ingredient</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="back_to_login">Back to login</string>
    <string name="edit_username">Edit username</string>
    <string name="new_username">New username</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="edit_email">Edit email</string>
    <string name="new_email">New email</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="logo">Logo</string>
    <string name="all_selected">All Selected</string>
    <string name="chefmini_cooking">Chefmini is cooking your recipe… 🔥</string>
    <string name="recipe_title_format">🍳 %1$s</string>
    <string name="combo_match_format">%1$s Match</string>
    <string name="gathering_ingredients">Gathering ingredients and families… 📋</string>
    <string name="searching_combos">Searching matching combos… 🔍</string>
    <string name="extra_ingredients">📋 EXTRA INGREDIENTS:</string>
    <string name="steps">👨‍🍳 STEPS:</string>
    <string name="ok">OK</string>


</resources>