<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <include layout="@layout/view_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIngredient"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredient"

            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <AutoCompleteTextView
                android:id="@+id/actvIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFamilies"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/families"

            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <AutoCompleteTextView
                android:id="@+id/actvFamilies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                tools:ignore="KeyboardInaccessibleWidget"
                android:textSize="16sp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/combo_size"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/_4" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/get_combos"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRefresh"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/refresh_ingredients"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCombos"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

</ScrollView>